# picoRL

./: ARCHITECTURE.md  README.md  pyproject.toml  scratch.py  train.py
algorithms/: common.py  grpo.py  ppo.py  reinforce.py
core/: batched_env.py  nanollm.py  types.py
environments/: base.py  letter_counting.py
envs/: __init__.py  letter_counting.py
notebooks/: unsloth_grpo_walkthrough.ipynb
picorl/: __init__.py  env.py  rollout.py
picorl/algorithms/: grpo.py  ppo.py  reinforce.py  utils.py
runs/letter_counting_qwen3_4b/: README.md  run_report.md  wandb_metrics_i9cxyhh6.json
