[project]
name = "picorl"
version = "0.1.0"
description = "Minimal GRPO implementation for RL workshop"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.5.0",
    "transformers>=4.46.0",
    "datasets>=3.0.0",
    "nltk>=3.8",
    "accelerate>=1.0.0",
    "wandb>=0.18.0",
    "vllm>=0.7.0; sys_platform == 'linux'",
]
