[project]
name = "picorl"
version = "0.2.0"
description = "Minimal RL for LLMs — workshop edition"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.5.0",
    "transformers>=4.46.0",
    "datasets>=3.0.0",
    "nltk>=3.8",
    "accelerate>=1.0.0",
    "peft>=0.13.0",
    "wandb>=0.18.0",
    "matplotlib>=3.8.0",
    "vllm>=0.7.0; sys_platform == 'linux'",
]

[tool.setuptools.packages.find]
include = ["algorithms*", "core*", "environments*"]
